fix searchbar overflow in firfox and safari

--- a/assets/style.css
+++ b/assets/style.css
@@ -57,7 +57,6 @@ ul {
 
 .fullSearchBox.search_box {
   min-height: calc(100vh - 6em);
-  width: 100%;
 }
 
 .fullSearchBox.search {
